# ardp-core

./: .gitignore  README.md
.github/workflows/: build-docker-images.yml
docker-base-images/: README.md
docker-base-images/node-react/: Dockerfile  README.md
docker-base-images/python-fastapi/: Dockerfile  README.md
docker-base-images/python-mcp/: Dockerfile  README.md
github-templates/fastapi-service/: README.md  cookiecutter.json
github-templates/fastapi-service/{{cookiecutter.project_slug}}/: Dockerfile  pyproject.toml
github-templates/fastapi-service/{{cookiecutter.project_slug}}/src/{{cookiecutter.service_name}}/: main.py
github-templates/mcp-server/: README.md  cookiecutter.json
github-templates/mcp-server/{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  pyproject.toml
github-templates/mcp-server/{{cookiecutter.project_slug}}/.github/workflows/: build-test.yml
github-templates/mcp-server/{{cookiecutter.project_slug}}/src/{{cookiecutter.server_name}}/: __init__.py  server.py
github-templates/mcp-server/{{cookiecutter.project_slug}}/terraform/: main.tf
github-templates/mcp-server/{{cookiecutter.project_slug}}/tests/: test_server.py
github-templates/react-frontend/: README.md  cookiecutter.json
github-templates/react-frontend/{{cookiecutter.project_slug}}/: Dockerfile  package.json  vite.config.js
github-templates/react-frontend/{{cookiecutter.project_slug}}/src/: App.jsx
